kubernetes-resources/03_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-app
spec:
  rules:
    - host: 'localhost'
      http:
        paths:
        - path: /
          backend:
            serviceName: my-app
            servicePort: 8080
